[project]
name = "fieldfactor_runfall_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.5.18",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.3",
    "rasterio>=1.4.3",
    "scipy>=1.15.3",
]
